<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/red_col_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_marginTop="16dp"
        android:text="@string/red_col_str"
        app:backgroundTint="@color/theme_red"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/green_col_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/green_col_str"
        app:backgroundTint = "@color/theme_green"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/red_col_btn"
        app:layout_constraintStart_toStartOf="@+id/red_col_btn"
        app:layout_constraintTop_toBottomOf="@+id/red_col_btn" />

    <Button
        android:id="@+id/yellow_col_btn"
        android:layout_width="0dp"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/yellow_col_str"
        app:backgroundTint = "@color/theme_yellow"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/green_col_btn"
        app:layout_constraintStart_toStartOf="@+id/green_col_btn"
        app:layout_constraintTop_toBottomOf="@+id/green_col_btn" />

    <Button
        android:id="@+id/violet_col_btn"
        android:layout_width="0dp"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        app:backgroundTint = "@color/theme_violet"
        android:layout_marginTop="20dp"
        android:text="@string/violet_col_str"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/yellow_col_btn"
        app:layout_constraintStart_toStartOf="@+id/yellow_col_btn"
        app:layout_constraintTop_toBottomOf="@+id/yellow_col_btn" />

    <Button
        android:id="@+id/blue_col_btn"
        android:layout_width="0dp"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint = "@color/theme_blue"
        android:text="@string/blue_col_str"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/violet_col_btn"
        app:layout_constraintStart_toStartOf="@+id/violet_col_btn"
        app:layout_constraintTop_toBottomOf="@+id/violet_col_btn" />

    <Button
        android:id="@+id/dark_col_btn"
        android:layout_width="0dp"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        app:backgroundTint = "@color/theme_dark"
        android:layout_marginTop="20dp"
        android:text="@string/dark_col_str"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/blue_col_btn"
        app:layout_constraintStart_toStartOf="@+id/blue_col_btn"
        app:layout_constraintTop_toBottomOf="@+id/blue_col_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/choose_color_str"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>