<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/level_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickGoLevelSelect"
        android:text="@string/select_level_str"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />


    <Button
        android:id="@+id/settings_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickGoSettings"
        android:text="@string/settings_str"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/level_select_btn"
        app:layout_constraintStart_toStartOf="@+id/level_select_btn"
        app:layout_constraintTop_toBottomOf="@+id/level_select_btn" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickGoAbout"
        android:text="@string/about_str"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>